# ASMod

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
ASMod/: ASMod.rc  CASMod.cpp  CASMod.h  CASModModuleInfo.cpp  CASModModuleInfo.h  CMakeLists.txt  CreateInterface_api.cpp  SvenCoopSupport.cpp  SvenCoopSupport.h  dllapi.cpp  dllapi_post.cpp  h_export.cpp  info_name.h  meta_api.cpp
common/: CMakeLists.txt  Platform.h  StringUtils.cpp  StringUtils.h
doc/html/: metamod.html
doc/txt/: metamod.txt
hlsdk/common/: cvardef.h
hlsdk/dlls/: extdll.h  util.h
hlsdk/engine/: eiface.h  progdefs.h
keyvalues/: CKeyvalue.cpp  CKeyvalueBlock.cpp  CKeyvaluesLexer.cpp  CKeyvaluesWriter.cpp  CKeyvaluesWriter.h  CMakeLists.txt
metamod/: CMakeLists.txt  GiveFnptrsToDllExport.h  api_hook.cpp  commands_meta.cpp  comp_dep.h  conf_meta.cpp  conf_meta.h  engine_api.cpp  game_autodetect.cpp  game_support.cpp  games.h  h_export.cpp  info_name.h  linkent.h  meta_api.h  meta_eiface.cpp  meta_eiface.h  metamod.cpp  mlist.cpp  mplugin.cpp  mutil.cpp  osdep.cpp  plinfo.h  reg_support.cpp  sdk_util.h  vers_meta.h
modules/: CMakeLists.txt
modules/SCInterop/: CASSCInteropModule.cpp  CASSCInteropModule.h  CMakeLists.txt  Module.cpp  Module.h  StringInterop.cpp  StringInterop.h
modules/SQL/: ASHLSQL.cpp  ASHLSQL.h  CASSQLModule.cpp  CASSQLModule.h  CMakeLists.txt  Module.cpp  Module.h
modules/stub_module/: CASStubModule.cpp  CASStubModule.h  CMakeLists.txt  Module.cpp  Module.h
shared/: CMakeLists.txt  InterfaceHelpers.h
shared/ASMod/: CASModBaseModule.cpp  CASModBaseModule.h  CASSimpleEnvironment.h  CMakeLists.txt  CreateInterface_api.h  IASEnvironment.h  IASMod.h  IASModModule.h
stub_plugin/: CMakeLists.txt
trace_plugin/: CMakeLists.txt  dllapi.cpp  dllapi_post.cpp  engine_api.cpp  engine_api_post.cpp  meta_api.cpp
utility/: CEscapeSequences.cpp  CMakeLists.txt  CMemory.h  CString.cpp  CString.h
wdmisc_plugin/: CMakeLists.txt  h_export.cpp  wdmisc.cpp  wdmisc.h
